restructure and clear day 2

--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\netcoreapp3.1\Day2PuzzleInput.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="bin\Debug\netcoreapp3.1\Day1PuzzleInput.txt" />
   </ItemGroup>
 
