--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="CodeInputFiles\Day2PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day3PuzzleInput.txt" />
   </ItemGroup>
@@ -21,10 +27,6 @@
     <Content Include="CodeInputFiles\Day3PuzzleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="bin\Debug\netcoreapp3.1\" />
   </ItemGroup>
 
 </Project>
