--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="CodeInputFiles\Day2PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day3PuzzleInput.txt" />
+    <None Remove="CodeInputFiles\Day4PuzzleInput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +26,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeInputFiles\Day3PuzzleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CodeInputFiles\Day4PuzzleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
