--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -16,6 +16,7 @@
     <None Remove="CodeInputFiles\Day2PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day3PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day4PuzzleInput.txt" />
+    <None Remove="CodeInputFiles\Day4TestPuzzleInput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeInputFiles\Day4PuzzleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CodeInputFiles\Day4TestPuzzleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
