--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -17,6 +17,7 @@
     <None Remove="CodeInputFiles\Day3PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day4PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day4TestPuzzleInput.txt" />
+    <None Remove="CodeInputFiles\Day5PuzzleInput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +34,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeInputFiles\Day4TestPuzzleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CodeInputFiles\Day5PuzzleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
