--- a/2020/2020.csproj
+++ b/2020/2020.csproj
@@ -23,6 +23,7 @@
     <None Remove="CodeInputFiles\Day7PuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day7TestPuzzleInput.txt" />
     <None Remove="CodeInputFiles\Day8PuzzleInput.txt" />
+    <None Remove="CodeInputFiles\Day9PuzzleInput.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,6 +58,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="CodeInputFiles\Day6TestPuzzleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="CodeInputFiles\Day9PuzzleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
